deploy: 1e0c9fe06f44c14b2d97f522050ff4c157430341

--- a/mlang/Mlang/Driver/index.html
+++ b/mlang/Mlang/Driver/index.html
@@ -28,4 +28,4 @@
   <span><span>int option</span> <span class="arrow">&#45;&gt;</span></span>
   <span>bool <span class="arrow">&#45;&gt;</span></span>
   <span><span><span>string list</span> option</span> <span class="arrow">&#45;&gt;</span></span>
-  unit</span></code></div><div class="spec-doc"><p>Entry function for the executable. Returns a negative number in case of error.</p></div></div><div class="odoc-spec"><div class="spec value" id="val-main" class="anchored"><a href="#val-main" class="anchor"></a><code><span><span class="keyword">val</span> main : <span>unit <span class="arrow">&#45;&gt;</span></span> <span class="xref-unresolved">Cmdliner</span>.Cmd.Exit.code</span></code></div></div></div></body></html>
+  unit</span></code></div><div class="spec-doc"><p>Entry function for the executable. Returns a negative number in case of error.</p></div></div><div class="odoc-spec"><div class="spec value" id="val-main" class="anchored"><a href="#val-main" class="anchor"></a><code><span><span class="keyword">val</span> main : <span>unit <span class="arrow">&#45;&gt;</span></span> <span class="type-var">'a</span></span></code></div></div></div></body></html>
