deploy: 76cdffd61ca6fe6e358ad07961dfe9e8434f7009

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="irj_checker/index.html">irj_checker</a> <span class="version">%%VERSION%%</span></li>
-      <li><a href="mlang/index.html">mlang</a> <span class="version">%%VERSION%%</span></li>
+      <li><a href="irj_checker/index.html">irj_checker</a> <span class="version">76cdffd</span></li>
+      <li><a href="mlang/index.html">mlang</a> <span class="version">76cdffd</span></li>
       </ol>
       </div>
     </main>
