--- a/mlang/Mlang/Mir_interpreter/index.html
+++ b/mlang/Mlang/Mir_interpreter/index.html
@@ -7,7 +7,7 @@
   <span><span><a href="../Com/index.html#type-literal">Com.literal</a> <a href="../Com/Var/Map/index.html#type-t">Com.Var.Map.t</a></span> <span class="arrow">&#45;&gt;</span></span>
   <span><a href="../Cli/index.html#type-value_sort">Cli.value_sort</a> <span class="arrow">&#45;&gt;</span></span>
   <span><a href="../Cli/index.html#type-round_ops">Cli.round_ops</a> <span class="arrow">&#45;&gt;</span></span>
-  <span><span>float option</span> <a href="../StrMap/index.html#type-t">StrMap.t</a></span> * <a href="../StrSet/index.html#type-t">StrSet.t</a></span></code></div><div class="spec-doc"><p>Main interpreter function</p></div></div><div class="odoc-spec"><div class="spec value" id="val-evaluate_expr" class="anchored"><a href="#val-evaluate_expr" class="anchor"></a><code><span><span class="keyword">val</span> evaluate_expr : 
+  <span><a href="../Com/index.html#type-literal">Com.literal</a> <a href="../StrMap/index.html#type-t">StrMap.t</a></span> * <a href="../StrSet/index.html#type-t">StrSet.t</a></span></code></div><div class="spec-doc"><p>Main interpreter function</p></div></div><div class="odoc-spec"><div class="spec value" id="val-evaluate_expr" class="anchored"><a href="#val-evaluate_expr" class="anchor"></a><code><span><span class="keyword">val</span> evaluate_expr : 
   <span><a href="../Mir/index.html#type-program">Mir.program</a> <span class="arrow">&#45;&gt;</span></span>
   <span><span><a href="../Mir/index.html#type-expression">Mir.expression</a> <a href="../Pos/index.html#type-marked">Pos.marked</a></span> <span class="arrow">&#45;&gt;</span></span>
   <span><a href="../Cli/index.html#type-value_sort">Cli.value_sort</a> <span class="arrow">&#45;&gt;</span></span>
